[package]
name = "bunny-cdn-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
reqwest = { version = "*", features = ["stream", "json"] }
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["fs"] }
