[package]
name = "bunny-cdn-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "*", default-features = false }
reqwest = { version = "*", default-features = false, features = [
    "json",
    "stream",
    "http2",
] }
serde = { version = "*", default-features = false, features = ["derive"] }
tokio-util = { version = "*", default-features = false, features = ["io"] }
tokio = { version = "*", default-features = false, features = ["fs"] }
