[package]
name = "bunny-cdn-wrapper"
version = "0.1.0"
edition = "2021"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
lazy_static = { version = "*", default-features = false }
reqwest = { version = "*", default-features = false, features = [
    "json",
    "stream",
] }
serde = { version = "*", default-features = false, features = ["derive"] }
tokio-util = { version = "*", default-features = false, features = ["io"] }
tokio = { version = "*", default-features = false, features = ["fs"] }
